# voiceclub

./: .env.example  .env.local  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  Dashboard.tsx  DashboardPrototype.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AudioSettingsPanel.tsx  ImageCropModal.tsx  InvitePanel.tsx  MemberManagementPanel.tsx  SettingsModal.tsx  TeamSettingsPanel.tsx  UserSettingsPanel.tsx  VoiceRoom.tsx
src/lib/: accent.ts  audioPreferences.ts  checkForUpdates.ts  supabase.ts
src/screens/: AuthScreen.tsx  CreateTeamScreen.tsx  NoTeamScreen.tsx
supabase/: .gitignore  config.toml
supabase/functions/livekit-token/: index.ts
