[package]
name = "voiceclub"
version = "0.1.0"
description = "Private team voice communication app"
authors = ["VoiceClub"]
edition = "2021"

[lib]
name = "voiceclub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
