[package]
name = "voiceclub"
version = "0.2.0"
description = "Private team voice communication app"
authors = ["VoiceClub"]
edition = "2021"

[lib]
name = "voiceclub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
